--- a/CityInfo.API/Properties/launchSettings.json
+++ b/CityInfo.API/Properties/launchSettings.json
@@ -1,22 +1,33 @@
 {
+  "$schema": "https://json.schemastore.org/launchsettings.json",
+  "iisSettings": {
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true,
+    "iisExpress": {
+      "applicationUrl": "http://localhost:16543",
+      "sslPort": 44332
+    }
+  },
   "profiles": {
     "http": {
       "commandName": "Project",
+      "launchBrowser": true,
       "launchUrl": "swagger",
+      "applicationUrl": "http://localhost:2138",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "dotnetRunMessages": true,
-      "applicationUrl": "http://localhost:2138"
+      "dotnetRunMessages": true
     },
     "https": {
       "commandName": "Project",
+      "launchBrowser": true,
       "launchUrl": "swagger",
+      "applicationUrl": "https://localhost:2137;http://localhost:2138",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Production"
       },
-      "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:2137;http://localhost:2138"
+      "dotnetRunMessages": true
     },
     "IIS Express": {
       "commandName": "IISExpress",
@@ -25,15 +36,6 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
-    }
-  },
-  "$schema": "https://json.schemastore.org/launchsettings.json",
-  "iisSettings": {
-    "windowsAuthentication": false,
-    "anonymousAuthentication": true,
-    "iisExpress": {
-      "applicationUrl": "http://localhost:16543",
-      "sslPort": 44332
     }
   }
 }
