Finish logger module, dependency injection, validate input, add POST, PUT, PATCH and DELETE methods

--- a/CityInfo.API/appsettings.Development.json
+++ b/CityInfo.API/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "mailSettings": {
+    "mailToAddress": "dev@myocmpany.com",
+    "malFromAddress": "noreply@mycompany.com"
   }
 }
