add EF Core and DB connection

--- a/CityInfo.API/appsettings.Development.json
+++ b/CityInfo.API/appsettings.Development.json
@@ -8,5 +8,8 @@
   "mailSettings": {
     "mailToAddress": "dev@myocmpany.com",
     "malFromAddress": "noreply@mycompany.com"
-  }
+  },
+  "ConnectionStrings": {
+    "CityInfoDbConnectionString": "Data Source=CityInfo.db"
+  } 
 }
